[project]
name = "til"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "numpy==1.26.3",
    "pandas==2.1.0",
    "polars==1.14.0",
    "pre-commit>=4.2.0",
    "scikit-learn==1.2.0",
    "torch==2.3.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.4",
]
